Cli's first game screen post setup works as intended