@@ -107,17 +107,18 @@ public class CLI implements Viewable
     }
 
     private String nicksLine(){
-        String s = "";
-        nicks.forEach(s::concat);
-        for(int i = nicks.size(); i > 4  ; i++)
-            s.concat("               ");
-        return s;
+        StringBuilder sBuilder = new StringBuilder();
+        for (String nick : nicks)
+            sBuilder.append(nick);
+        sBuilder.append("               ".repeat(Math.max(0, 4 - nicks.size())));
+        return sBuilder.toString();
     }
 
     private String getPointsAndHandColors(){
-        String s = "";
-        scores.forEach((k, v) -> s.concat("   " + scores.get(k) + " " + getHandColors(k) + "      "));
-        return String.format("%-72s", s);
+        StringBuilder sBuilder = new StringBuilder();
+        scores.forEach((k, v) -> sBuilder.append("   ").append(scores.get(k)).append(" ").append(getHandColors(k)).append("      "));
+        sBuilder.append("                  ".repeat(Math.max(0, 4 - nicks.size())));
+        return sBuilder.toString();
     }
 
     private void initializeScore(String nick){
@@ -433,7 +434,15 @@ public class CLI implements Viewable
             for(int i = 0 ; i < 41; i++)
                 for(int j = 0 ; j < 81 ; j++)
                     v[i][j] = " ";
-            v[20][40] = "\u001B[37m▀";
+            v[20][40] = "\u001B[37m▀\u001B[0m";
+            /*alternative method, maybe better
+            String[][] field = new String[41][81];
+            for(int i = 0 ; i < 41; i++)
+                for(int j = 0 ; j < 81 ; j++)
+                    field[i][j] = " ";
+            field[20][40] = "\u001B[37m▀";
+            gameFields.put(k, field);
+            */
         });
     }
 
@@ -473,10 +482,10 @@ public class CLI implements Viewable
     }
 
     private String getFieldRow(String[][] f, int row, int lS, int hhS){
-        String r = f[row - 10 + hhS][-20 + lS];
+        StringBuilder sBuilder = new StringBuilder(f[row - 10 + hhS][-20 + lS]);
         for(int i = -19; i < 21; i++)
-            r.concat(f[row + hhS][i + lS]);
-        return r;
+            sBuilder.append(f[row + hhS][i + lS]);
+        return sBuilder.toString();
     /*
     f[row + hhS][-20 + lS] + f[row + hhS][-19 + lS] + f[row + hhS][-18 + lS]+ f[row + hhS][-17 + lS]+ f[row + hhS][-16 + lS]+ f[row + hhS][-15 + lS]+ f[row + hhS][-14 + lS]+ f[row + hhS][-13 + lS]+ f[row + hhS][-12 + lS]+ f[row + hhS][-11 + lS]
     + f[row + hhS][-10 + lS] + f[row + hhS][-9 + lS] + f[row + hhS][-8 + lS]+ f[row + hhS][-7 + lS]+ f[row + hhS][-6 + lS]+ f[row + hhS][-5 + lS]+ f[row + hhS][-4 + lS]+ f[row + hhS][-3 + lS]+ f[row + hhS][-2 + lS]+ f[row + hhS][-1 + lS]
@@ -516,28 +525,28 @@ public class CLI implements Viewable
 
     private void computeScreenLine(int n){
         switch (n) {
-            case 2 -> gameScreen.set(2, "║ " + formatIndicator(-20 + lateralShift) + "↓                " + formatIndicator(lateralShift) + "↓                " + formatIndicator(20 + lateralShift) + "↓  " + getNick(nicks.get(0)) + "   " + getNick(nicks.get(1)) + "   " + getNick(nicks.get(2)) + "   " + getNick(nicks.get(3)) + "   ║");
-            case 3 -> gameScreen.set(3, formatIndicator(20 + heightShift) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 0, lateralShift, heightShift / 2) + "  " + getPointsAndHandColors() + "║");
-            case 4 -> gameScreen.set(4, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 1, lateralShift, heightShift / 2) + "                                                                          ║");
-            case 5 -> gameScreen.set(5, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 2, lateralShift, heightShift / 2) + "  " + sharedObj1 + " ║");
-            case 6 -> gameScreen.set(6, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 3, lateralShift, heightShift / 2) + "  " + sharedObj2 + " ║");
-            case 7 -> gameScreen.set(7, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 4, lateralShift, heightShift / 2) + "  " + personalObj + " ║");
-            case 8 -> gameScreen.set(8, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 5, lateralShift, heightShift / 2) + "                                                                          ║");
-            case 9 -> gameScreen.set(9, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 6, lateralShift, heightShift / 2) + "  Gold          Resource            Game Field Shown: " + getNick(currentlyViewedPlayerNick) + "  ║");
-            case 10 -> gameScreen.set(10, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 7, lateralShift, heightShift / 2) + "  Deck:         Deck:            ┌──Card─Display───┐    ┌Shown─Symbols─┐  ║");
-            case 11 -> gameScreen.set(11, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 8, lateralShift, heightShift / 2) + "  " + topOfGDeck.getFirst() + " " + topOfRDeck.getFirst() + "    " + cardDisplay.getFirst() + "    " + symbolsTab.getFirst() + "  ║");
-            case 12 -> gameScreen.set(12, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 9, lateralShift, heightShift / 2) + "  " + topOfGDeck.get(1) + " " + topOfRDeck.get(1) + "    " + cardDisplay.get(1) + "    " + symbolsTab.get(1) + "  ║");
-            case 13 -> gameScreen.set(13, formatIndicator(heightShift) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 10, lateralShift, heightShift / 2) + "  " + topOfGDeck.get(2) + " " + topOfRDeck.get(2) + "    " + cardDisplay.get(2) + "    " + symbolsTab.get(2) + "  ║");
-            case 14 -> gameScreen.set(14, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 11, lateralShift, heightShift / 2) + "  " + topOfGDeck.get(3) + " " + topOfRDeck.get(3) + "    " + cardDisplay.get(3) + "    " + symbolsTab.get(3) + "  ║");
-            case 15 -> gameScreen.set(15, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 12, lateralShift, heightShift / 2) + "  Face Up Cards:                 " + cardDisplay.get(4) + "    " + symbolsTab.get(4) + "  ║");
-            case 16 -> gameScreen.set(16, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 13, lateralShift, heightShift / 2) + "  " + goldGround1.getFirst() + " " + resourceGround1.getFirst() + "    │                 │    " + symbolsTab.get(5) + "  ║");
-            case 17 -> gameScreen.set(17, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 14, lateralShift, heightShift / 2) + "  " + goldGround1.get(1) + " " + resourceGround1.get(1) + "    └─────────────────┘    " + symbolsTab.get(6) + "  ║");
-            case 18 -> gameScreen.set(18, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 15, lateralShift, heightShift / 2) + "  " + goldGround1.get(2) + " " + resourceGround1.get(2) + "   Cards in your hand:     └──────────────┘  ║");
-            case 19 -> gameScreen.set(19, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 16, lateralShift, heightShift / 2) + "  " + goldGround1.get(3) + " " + resourceGround1.get(3) + "   1)            2)            3)            ║");
-            case 20 -> gameScreen.set(20, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 17, lateralShift, heightShift / 2) + "  " + goldGround2.getFirst() + " " + resourceGround2.getFirst() + "   " + ownStringHand.get(0).get(0) + " " + ownStringHand.get(1).get(0) + " " + ownStringHand.get(2).get(0) + " ║");
-            case 21 -> gameScreen.set(21, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 18, lateralShift, heightShift / 2) + "  " + goldGround2.get(1) + " " + resourceGround2.get(1) + "   " + ownStringHand.get(0).get(1) + " " + ownStringHand.get(1).get(1) + " " + ownStringHand.get(2).get(1) + " ║");
-            case 22 -> gameScreen.set(22, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 19, lateralShift, heightShift / 2) + "  " + goldGround2.get(2) + " " + resourceGround2.get(2) + "   " + ownStringHand.get(0).get(2) + " " + ownStringHand.get(1).get(2) + " " + ownStringHand.get(2).get(2) + " ║");
-            case 23 -> gameScreen.set(23, formatIndicator(-20 + heightShift) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 20, lateralShift, heightShift / 2) + "  " + goldGround2.get(3) + " " + resourceGround2.get(3) + "   " + ownStringHand.get(0).get(3) + " " + ownStringHand.get(1).get(3) + " " + ownStringHand.get(2).get(3) + " ║");
+            case 2 -> gameScreen.set(2, "║ " + formatIndicator(lateralShift - 20 - 40) + "↓                " + formatIndicator(lateralShift - 40) + "↓                " + formatIndicator(lateralShift + 20 - 40) + "↓  " + nicksLine() + "      ║");
+            case 3 -> gameScreen.set(3, "║" + formatIndicator(20 + heightShift - 40) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 0, lateralShift, heightShift / 2 - 10) + "  " + getPointsAndHandColors() + "║");
+            case 4 -> gameScreen.set(4, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 1, lateralShift, heightShift / 2 - 10) + "                                                                          ║");
+            case 5 -> gameScreen.set(5, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 2, lateralShift, heightShift / 2 - 10) + "  " + sharedObj1 + " ║");
+            case 6 -> gameScreen.set(6, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 3, lateralShift, heightShift / 2 - 10) + "  " + sharedObj2 + " ║");
+            case 7 -> gameScreen.set(7, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 4, lateralShift, heightShift / 2 - 10) + "  " + personalObj + " ║");
+            case 8 -> gameScreen.set(8, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 5, lateralShift, heightShift / 2 - 10) + "                                                                          ║");
+            case 9 -> gameScreen.set(9, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 6, lateralShift, heightShift / 2 - 10) + "  Gold          Resource            Game Field Shown: " + getNick(currentlyViewedPlayerNick) + "  ║");
+            case 10 -> gameScreen.set(10, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 7, lateralShift, heightShift / 2 - 10) + "  Deck:         Deck:            ┌──Card─Display───┐    ┌Shown─Symbols─┐  ║");
+            case 11 -> gameScreen.set(11, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 8, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.getFirst() + " " + topOfRDeck.getFirst() + "    " + cardDisplay.getFirst() + "    " + symbolsTab.getFirst() + "  ║");
+            case 12 -> gameScreen.set(12, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 9, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.get(1) + " " + topOfRDeck.get(1) + "    " + cardDisplay.get(1) + "    " + symbolsTab.get(1) + "  ║");
+            case 13 -> gameScreen.set(13, "║" + formatIndicator(heightShift - 40) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 10, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.get(2) + " " + topOfRDeck.get(2) + "    " + cardDisplay.get(2) + "    " + symbolsTab.get(2) + "  ║");
+            case 14 -> gameScreen.set(14, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 11, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.get(3) + " " + topOfRDeck.get(3) + "    " + cardDisplay.get(3) + "    " + symbolsTab.get(3) + "  ║");
+            case 15 -> gameScreen.set(15, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 12, lateralShift, heightShift / 2 - 10) + "  Face Up Cards:                 " + cardDisplay.get(4) + "    " + symbolsTab.get(4) + "  ║");
+            case 16 -> gameScreen.set(16, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 13, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.getFirst() + " " + resourceGround1.getFirst() + "    │                 │    " + symbolsTab.get(5) + "  ║");
+            case 17 -> gameScreen.set(17, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 14, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.get(1) + " " + resourceGround1.get(1) + "    └─────────────────┘    " + symbolsTab.get(6) + "  ║");
+            case 18 -> gameScreen.set(18, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 15, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.get(2) + " " + resourceGround1.get(2) + "   Cards in your hand:     └──────────────┘  ║");
+            case 19 -> gameScreen.set(19, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 16, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.get(3) + " " + resourceGround1.get(3) + "   1)            2)            3)            ║");
+            case 20 -> gameScreen.set(20, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 17, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.getFirst() + " " + resourceGround2.getFirst() + "   " + ownStringHand.get(0).get(0) + " " + ownStringHand.get(1).get(0) + " " + ownStringHand.get(2).get(0) + " ║");
+            case 21 -> gameScreen.set(21, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 18, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.get(1) + " " + resourceGround2.get(1) + "   " + ownStringHand.get(0).get(1) + " " + ownStringHand.get(1).get(1) + " " + ownStringHand.get(2).get(1) + " ║");
+            case 22 -> gameScreen.set(22, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 19, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.get(2) + " " + resourceGround2.get(2) + "   " + ownStringHand.get(0).get(2) + " " + ownStringHand.get(1).get(2) + " " + ownStringHand.get(2).get(2) + " ║");
+            case 23 -> gameScreen.set(23, "║" + formatIndicator(-20 + heightShift - 40) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 20, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.get(3) + " " + resourceGround2.get(3) + "   " + ownStringHand.get(0).get(3) + " " + ownStringHand.get(1).get(3) + " " + ownStringHand.get(2).get(3) + " ║");
         }
     }
 
@@ -559,28 +568,28 @@ public class CLI implements Viewable
     @Override
     public void showFirstScreen(String thisNick){
         this.currentlyViewedPlayerNick = thisNick;
-        gameScreen.add(2, "║ " + formatIndicator(-20 + lateralShift) + "↓                " + formatIndicator(lateralShift) + "↓                " + formatIndicator(20 + lateralShift) + "↓  " + nicksLine() + "║");
-        gameScreen.add(3, formatIndicator(20 + heightShift) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 0, lateralShift, heightShift / 2) + "  " + getPointsAndHandColors() + "║");
-        gameScreen.add(4, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 1, lateralShift, heightShift / 2) + "                                                                          ║");
-        gameScreen.add(5, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 2, lateralShift, heightShift / 2) + "  " + sharedObj1 + " ║");
-        gameScreen.add(6, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 3, lateralShift, heightShift / 2) + "  " + sharedObj2 + " ║");
-        gameScreen.add(7, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 4, lateralShift, heightShift / 2) + "  " + personalObj + " ║");
-        gameScreen.add(8, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 5, lateralShift, heightShift / 2) + "                                                                          ║");
-        gameScreen.add(9, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 6, lateralShift, heightShift / 2) + "  Gold          Resource            Game Field Shown: " + getNick(currentlyViewedPlayerNick) + "  ║");
-        gameScreen.add(10, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 7, lateralShift, heightShift / 2) + "  Deck:         Deck:            ┌──Card─Display───┐    ┌Shown─Symbols─┐  ║");
-        gameScreen.add(11, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 8, lateralShift, heightShift / 2) + "  " + topOfGDeck.getFirst() + " " + topOfRDeck.getFirst() + "    " + cardDisplay.getFirst() + "    " + symbolsTab.getFirst() + "  ║");
-        gameScreen.add(12, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 9, lateralShift, heightShift / 2) + "  " + topOfGDeck.get(1) + " " + topOfRDeck.get(1) + "    " + cardDisplay.get(1) + "    " + symbolsTab.get(1) + "  ║");
-        gameScreen.add(13, formatIndicator(heightShift) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 10, lateralShift, heightShift / 2) + "  " + topOfGDeck.get(2) + " " + topOfRDeck.get(2) + "    " + cardDisplay.get(2) + "    " + symbolsTab.get(2) + "  ║");
-        gameScreen.add(14, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 11, lateralShift, heightShift / 2) + "  " + topOfGDeck.get(3) + " " + topOfRDeck.get(3) + "    " + cardDisplay.get(3) + "    " + symbolsTab.get(3) + "  ║");
-        gameScreen.add(15, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 12, lateralShift, heightShift / 2) + "  Face Up Cards:                 " + cardDisplay.get(4) + "    " + symbolsTab.get(4) + "  ║");
-        gameScreen.add(16, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 13, lateralShift, heightShift / 2) + "  " + goldGround1.getFirst() + " " + resourceGround1.getFirst() + "    │                 │    " + symbolsTab.get(5) + "  ║");
-        gameScreen.add(17, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 14, lateralShift, heightShift / 2) + "  " + goldGround1.get(1) + " " + resourceGround1.get(1) + "    └─────────────────┘    " + symbolsTab.get(6) + "  ║");
-        gameScreen.add(18, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 15, lateralShift, heightShift / 2) + "  " + goldGround1.get(2) + " " + resourceGround1.get(2) + "   Cards in your hand:     └──────────────┘  ║");
-        gameScreen.add(19, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 16, lateralShift, heightShift / 2) + "  " + goldGround1.get(3) + " " + resourceGround1.get(3) + "   1)            2)            3)            ║");
-        gameScreen.add(20, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 17, lateralShift, heightShift / 2) + "  " + goldGround2.getFirst() + " " + resourceGround2.getFirst() + "   " + ownStringHand.get(0).get(0) + " " + ownStringHand.get(1).get(0) + " " + ownStringHand.get(2).get(0) + " ║");
-        gameScreen.add(21, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 18, lateralShift, heightShift / 2) + "  " + goldGround2.get(1) + " " + resourceGround2.get(1) + "   " + ownStringHand.get(0).get(1) + " " + ownStringHand.get(1).get(1) + " " + ownStringHand.get(2).get(1) + " ║");
-        gameScreen.add(22, "    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 19, lateralShift, heightShift / 2) + "  " + goldGround2.get(2) + " " + resourceGround2.get(2) + "   " + ownStringHand.get(0).get(2) + " " + ownStringHand.get(1).get(2) + " " + ownStringHand.get(2).get(2) + " ║");
-        gameScreen.add(23, formatIndicator(-20 + heightShift) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 20, lateralShift, heightShift / 2) + "  " + goldGround2.get(3) + " " + resourceGround2.get(3) + "   " + ownStringHand.get(0).get(3) + " " + ownStringHand.get(1).get(3) + " " + ownStringHand.get(2).get(3) + " ║");
+        gameScreen.add(2, "║ " + formatIndicator(-20 + lateralShift - 40) + "↓                " + formatIndicator(lateralShift - 40) + "↓                " + formatIndicator(20 + lateralShift - 40) + "↓  " + nicksLine() + "      ║");
+        gameScreen.add(3, "║" + formatIndicator(20 + heightShift - 40) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 0, lateralShift, heightShift / 2 - 10) + "  " + getPointsAndHandColors() + "║");
+        gameScreen.add(4, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 1, lateralShift, heightShift / 2 - 10) + "                                                                          ║");
+        gameScreen.add(5, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 2, lateralShift, heightShift / 2 - 10) + "  " + sharedObj1 + " ║");
+        gameScreen.add(6, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 3, lateralShift, heightShift / 2 - 10) + "  " + sharedObj2 + " ║");
+        gameScreen.add(7, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 4, lateralShift, heightShift / 2 - 10) + "  " + personalObj + " ║");
+        gameScreen.add(8, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 5, lateralShift, heightShift / 2 - 10) + "                                                                          ║");
+        gameScreen.add(9, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 6, lateralShift, heightShift / 2 - 10) + "  Gold          Resource            Game Field Shown: " + getNick(currentlyViewedPlayerNick) + "  ║");
+        gameScreen.add(10, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 7, lateralShift, heightShift / 2 - 10) + "  Deck:         Deck:            ┌──Card─Display───┐    ┌Shown─Symbols─┐  ║");
+        gameScreen.add(11, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 8, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.getFirst() + " " + topOfRDeck.getFirst() + "    " + cardDisplay.getFirst() + "    " + symbolsTab.getFirst() + "  ║");
+        gameScreen.add(12, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 9, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.get(1) + " " + topOfRDeck.get(1) + "    " + cardDisplay.get(1) + "    " + symbolsTab.get(1) + "  ║");
+        gameScreen.add(13, "║" + formatIndicator(heightShift - 40) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 10, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.get(2) + " " + topOfRDeck.get(2) + "    " + cardDisplay.get(2) + "    " + symbolsTab.get(2) + "  ║");
+        gameScreen.add(14, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 11, lateralShift, heightShift / 2 - 10) + "  " + topOfGDeck.get(3) + " " + topOfRDeck.get(3) + "    " + cardDisplay.get(3) + "    " + symbolsTab.get(3) + "  ║");
+        gameScreen.add(15, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 12, lateralShift, heightShift / 2 - 10) + "  Face Up Cards:                 " + cardDisplay.get(4) + "    " + symbolsTab.get(4) + "  ║");
+        gameScreen.add(16, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 13, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.getFirst() + " " + resourceGround1.getFirst() + "    │                 │    " + symbolsTab.get(5) + "  ║");
+        gameScreen.add(17, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 14, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.get(1) + " " + resourceGround1.get(1) + "    └─────────────────┘    " + symbolsTab.get(6) + "  ║");
+        gameScreen.add(18, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 15, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.get(2) + " " + resourceGround1.get(2) + "   Cards in your hand:     └──────────────┘  ║");
+        gameScreen.add(19, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 16, lateralShift, heightShift / 2 - 10) + "  " + goldGround1.get(3) + " " + resourceGround1.get(3) + "   1)            2)            3)            ║");
+        gameScreen.add(20, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 17, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.getFirst() + " " + resourceGround2.getFirst() + "   " + ownStringHand.get(0).get(0) + " " + ownStringHand.get(1).get(0) + " " + ownStringHand.get(2).get(0) + " ║");
+        gameScreen.add(21, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 18, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.get(1) + " " + resourceGround2.get(1) + "   " + ownStringHand.get(0).get(1) + " " + ownStringHand.get(1).get(1) + " " + ownStringHand.get(2).get(1) + " ║");
+        gameScreen.add(22, "║    " + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 19, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.get(2) + " " + resourceGround2.get(2) + "   " + ownStringHand.get(0).get(2) + " " + ownStringHand.get(1).get(2) + " " + ownStringHand.get(2).get(2) + " ║");
+        gameScreen.add(23, "║" + formatIndicator(-20 + heightShift - 40) + "↗" + getFieldRow(gameFields.get(currentlyViewedPlayerNick), 20, lateralShift, heightShift / 2 - 10) + "  " + goldGround2.get(3) + " " + resourceGround2.get(3) + "   " + ownStringHand.get(0).get(3) + " " + ownStringHand.get(1).get(3) + " " + ownStringHand.get(2).get(3) + " ║");
         updateScreen();
 
     }
